# keyzen

./: .gitignore  Cargo.toml  DESIGN.md  GUI_GUIDE.md  README.md
.github/workflows/: release.yml
crates/keyzen_core/: Cargo.toml
crates/keyzen_core/src/: lib.rs
crates/keyzen_data/: Cargo.toml
crates/keyzen_data/src/: lib.rs
crates/keyzen_engine/: Cargo.toml
crates/keyzen_engine/src/: lib.rs  pinyin.rs
crates/keyzen_gui/: Cargo.toml
crates/keyzen_gui/src/: main.rs
crates/keyzen_persistence/: Cargo.toml
crates/keyzen_persistence/src/: lib.rs
crates/keyzen_tui/: Cargo.toml
crates/keyzen_tui/src/: main.rs
crates/keyzen_ui/: Cargo.toml
crates/keyzen_ui/src/: main.rs
lessons/chinese/: 301_comprehensive.ron  301_pinyin_basic_1.ron  302_pinyin_basic_2.ron  303_pinyin_basic_3.ron  304_pinyin_intermediate_1.ron  305_pinyin_intermediate_2.ron  306_pinyin_intermediate_3.ron  307_pinyin_advanced_1.ron  308_pinyin_advanced_2.ron  309_pinyin_advanced_3.ron  310_pinyin_comprehensive.ron
lessons/code/: 201_rust_comprehensive.ron
lessons/code/rust/: 101_hello_world.ron  102_functions.ron  103_structs.ron
lessons/english/: 01_basic_words.ron  02_sentences.ron  03_common_phrases.ron  04_punctuation.ron  05_paragraphs.ron  101_comprehensive.ron
lessons/symbols/: 201_math_operators.ron  202_comparison_logic.ron  203_brackets_quotes.ron  204_special_chars.ron  205_code_snippets.ron  401_symbols_comprehensive.ron
resources/: README.md
resources/macos/: keyzen.icns
