[package]
name = "keyzen_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keyzen_core.workspace = true
keyzen_data.workspace = true
keyzen_persistence = { path = "../keyzen_persistence", optional = true }
chrono.workspace = true

[features]
default = ["persistence"]
persistence = ["keyzen_persistence"]
