[package]
name = "keyzen_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keyzen"
path = "src/main.rs"

[dependencies]
keyzen_core.workspace = true
keyzen_engine.workspace = true
keyzen_data.workspace = true
anyhow.workspace = true

# GPUI - Zed 的 UI 框架
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.164.2" }

[build-dependencies]
