[package]
name = "keyzen_persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
keyzen_core.workspace = true
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
