[package]
name = "keyzen_tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keyzen-tui"
path = "src/main.rs"

[dependencies]
keyzen_core.workspace = true
keyzen_engine.workspace = true
keyzen_data.workspace = true
anyhow.workspace = true
ratatui = "0.29"
crossterm = "0.28"
